<resources>
    <string name="app_name">Event Mate</string>
    <string name="eventsimg">eventsImg</string>
    <string name="welcome_new_user">Welcome New User</string>
    <string name="register_by_filling_details">Register by filling details!</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password_msg">Don\'t worry! it happens. Please enter the email address associated with your account.</string>
    <string name="on_submit_msg">Check out your mailbox, you will receive an email containing link where you can reset your password</string>
    <string name="submit">SUBMIT</string>
    <string name="start">Start</string>
    <string name="top_right">Top Right</string>
    <string name="bottom_left">Bottom Left</string>
    <string name="sign_out">Sign Out</string>
    <string name="getStarted">Add an Event to get Started..</string>
    <string name="userimg">userImg</string>
    <string name="empty_img">Empty Img</string>
    <string name="no_schedules_yet">No Events are Scheduled Yet..</string>
    <string name="bg">BackgroundImg</string>
    <string name="creator">Creator</string>
    <string name="list">List</string>
    <string name="posted_by">Posted By :</string>
    <string name="enter_description">Description..</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="current_signIn">"You are currently signed in as : "</string>
    <string name="userImage">userImage</string>
    <string name="accessCode">Enter Access Code..</string>
    <string name="drop">Drop Event</string>
    <string name="event">Event</string>
    <string name="add">Add</string>
    <string name="enter_event_name">Enter Event Name..</string>
    <string name="enter_venue">Enter Venue..</string>
    <string name="time">Time..</string>
    <string name="date">Event Date..</string>
    <string name="edit">Edit</string>
    <string name="events">Events</string>
    <string name="add_event">Add Event</string>
    <string name="eventTitle">Event Title</string>
    <string name="continue_as">Choose Account Type :</string>
    <string name="mate">Mate</string>
    <string name="organiser">Organiser</string>
    <string name="participant">Participant</string>
    <string name="info">(Sign out anytime to change account type)</string>
    <string name="next">Next</string>
    <string name="information">Fill Account Id To Continue to Events..</string>
    <string name="sort_by_newest_first">Sort by Newest first</string>
    <string name="sort_by_deadline">Sort by Deadline</string>
    <string name="uploaded_by_you">Uploaded By You</string>
    <string name="all_uploads">All Uploads</string>
    <string name="venue">Venue :</string>
    <string name="dateTxt">Date</string>
    <string name="timeTxt">Time</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="enter_id">Enter Your ID</string>
    <string name="enter_your_class">Enter Your Class</string>
    <string name="enter_your_department">Enter Your Department</string>
    <string name="registrants">Registrants</string>
    <string name="no_registrants_yet">No Registrants Yet..</string>
    <string name="classValue">Class</string>
    <string name="department">Department</string>
    <string name="formattedEmail">(%s)</string>
    <string name="your_name_and_email_use">( Your Account\'s Name and Email will be used. )</string>
    <string name="sort_by_class">Sort by Class</string>
    <string name="sort_by_department">Sort by Department</string>
    <string name="export_as_spreadsheet">Export as SpreadSheet</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="are_you_sure_you_want_to_drop_this">Are you sure you want to drop this?</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="accountId">Account ID</string>
    <string name="about">About</string>
    <string name="overview_project">EventMate is an Android application designed to streamline event management for organizers and simplify participation for attendees. The app leverages Firebase for user authentication, event storage, and real-time updates.</string>
    <string name="overview">Overview</string>
    <string name="key_features">\u0020 Key Features :</string>
    <string name="user_authentication">User Authentication</string>
    <string name="authenticationTxt">\u2023 Email and password-based login\n\u2023 User registration\n\u2023 Forgot password functionality\n\u2023 Role-based access control (organizer or\n\u0020\u0020\u0020 participant)\n\u2023 Organizer code verification for organizers\n\u2023 Participant code verification for\n\u0020\u0020\u0020 participants</string>
    <string name="event_management">Event Management</string>
    <string name="managementTxt">\u2023 Organizer-centric dashboard\n\u2023 Event creation, editing, and deletion\n\u2023 Event sorting (by organizer, all events,\n\u0020\u0020\u0020 newest, oldest)\n\u2023 Event filtering (newest, oldest)\n\u2023 Registrants list management (view, sort by\n\u0020\u0020\u0020 class, department, export to spreadsheet)</string>
    <string name="participant_features">Participant Features</string>
    <string name="technology_stack">Technology Stack</string>
    <string name="github_repository">GitHub Repository</string>
    <string name="pFeaturesTxt">\u2023 Event browsing and filtering (newest,\n\u0020\u0020\u0020 oldest)\n\u2023 Event details and registration\n\u2023 Real-time updates on event status and\n\u0020\u0020\u0020 registrations</string>
    <string name="techStack">\u2023 Android Studio\n\u2023 Kotlin (or Java)\n\u2023 Firebase (Authentication, Realtime \n\u0020\u0020\u0020Database, Storage)</string>
    <string name="usage">Usage</string>
    <string name="usageTxt">\u2023 Users create accounts and log in.\n\u2023 Organizers input an organizer code to\n\u0020\u0020\u0020 access the organizer dashboard.\n\u2023 Participants input a participant code to\n\u0020\u0020\u0020 view and register for events.\n\u2023 Organizers can add, edit, and delete events,\n\u0020\u0020\u0020 manage registrants, and export data.\n\u2023 Participants can view event details and\n\u0020\u0020\u0020 register for events.</string>
    <string name="hi">Hi, 👋</string>
    <string name="username">UserName</string>
    <string name="uploaded_by_u">Added\nBy You</string>
    <string name="all_ups">All\nEvents</string>
    <string name="you_ve_registered">You\'ve Registered In</string>
    <string name="gud_morning">"Good Morning ⛵"</string>
    <string name="gud_afternoon">"Good Afternoon ⛱️"</string>
    <string name="gud_evening">"Good Evening ✨"</string>
    <string name="reg_info">You have\'nt Registered in any Event Yet..</string>
    <string name="regEvents">Registered Events</string>
    <string name="reg_on">Reg. On :</string>
    <string name="eventDate">Event On :</string>
    <string name="filter">filter</string>
    <string name="sort_by_registration_date">Sort By Registration Date</string>
    <string name="sort_by_date_added">Sort By Date Added</string>
    <string name="filter_by_department">Filter By Department</string>
    <string name="filter_by_class">Filter By Class</string>
    <string name="deadline">Deadline..</string>
    <string name="deadlineOn">Deadline On:</string>
    <string name="sort_by_oldest_first">Sort By Oldest First</string>
</resources>