<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EnrollAct"
    android:background="#4D000000">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:contentDescription="@string/bg"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="@id/image"
                app:srcCompat="@drawable/img_1"
                tools:ignore="ImageContrastCheck"/>

            <TextView
                android:id="@+id/venue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_venue"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toTopOf="@id/venueTxt"
                app:layout_constraintStart_toEndOf="@id/venueTxt"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/eventTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/eventTitle"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/venueTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/venue"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@id/eventTitle"
                app:layout_constraintTop_toBottomOf="@id/eventTitle" />

            <TextView
                android:id="@+id/dateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateTxt"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/venueTxt"
                app:layout_constraintStart_toStartOf="@id/venueTxt"/>

            <ImageView
                android:id="@+id/dateImg"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/calendar"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/dateTxt"
                app:layout_constraintStart_toStartOf="@id/dateTxt"
                app:tint = "#B3000000"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@id/dateImg"
                app:layout_constraintBottom_toBottomOf="@id/dateImg"
                app:layout_constraintStart_toEndOf="@id/dateImg"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/timeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeTxt"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginStart="24dp"
                app:layout_constraintTop_toTopOf="@id/dateTxt"
                app:layout_constraintStart_toEndOf="@id/date"
                app:layout_constraintBottom_toBottomOf="@id/dateTxt"/>

            <ImageView
                android:id="@+id/timeImg"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/clock"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/timeTxt"
                app:layout_constraintStart_toStartOf="@id/timeTxt"
                app:tint = "#B3000000"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@id/timeImg"
                app:layout_constraintBottom_toBottomOf="@id/timeImg"
                app:layout_constraintStart_toEndOf="@id/timeImg"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/description"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@id/dateImg"
                app:layout_constraintTop_toBottomOf="@id/dateImg"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:text="@string/enter_description"
                android:textSize="17sp"
                android:gravity="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/descriptionTxt"
                app:layout_constraintTop_toBottomOf="@id/descriptionTxt" />

            <TextView
                android:id="@+id/posted_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:text="@string/posted_by"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@id/description"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <TextView
                android:id="@+id/creator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/creator"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@id/posted_by"
                app:layout_constraintTop_toBottomOf="@id/posted_by"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_margin="30dp"
        android:background="@drawable/addbtn_bg"
        android:elevation="20dp"
        android:padding="10dp"
        android:rotation="45"
        android:src="@drawable/plus_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <Button
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/register"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel"
        app:layout_constraintTop_toTopOf="@id/cancel"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>