<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AlreadyRegAct"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@drawable/upper_bg"
        android:elevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regEvents"
            android:textStyle="bold"
            android:layout_marginStart="26dp"
            android:textColor="#E6000000"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list"
            android:textSize="22sp"
            android:layout_marginStart="6dp"
            app:layout_constraintStart_toEndOf="@id/welcome"
            app:layout_constraintTop_toTopOf="@id/welcome"
            app:layout_constraintBottom_toBottomOf="@id/welcome"/>

        <ImageView
            android:id="@+id/filter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="14dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/filter"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Events"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="12dp"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/rview_bg"
        android:elevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout2" />

    <ImageView
        android:id="@+id/emptyImg"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:contentDescription="@string/empty_img"
        android:elevation="20dp"
        android:src="@drawable/registartion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout2"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/emptyLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:text="@string/reg_info"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/emptyImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>