<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EventAct"
    android:background="#F8FFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@drawable/upper_bg"
        android:elevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events"
            android:textStyle="bold"
            android:layout_marginStart="26dp"
            android:textColor="#E6000000"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list"
            android:textSize="22sp"
            android:layout_marginStart="6dp"
            app:layout_constraintStart_toEndOf="@id/welcome"
            app:layout_constraintTop_toTopOf="@id/welcome"
            app:layout_constraintBottom_toBottomOf="@id/welcome"/>

        <ImageView
            android:id="@+id/options"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:src="@drawable/more_options"
            android:padding="20dp"
            app:tint = "@color/black_7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Events"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="12dp"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/rview_bg"
        android:elevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout2" />

    <ImageView
        android:id="@+id/emptyImg"
        android:layout_width="0dp"
        android:layout_height="240dp"
        android:layout_marginHorizontal="20dp"
        android:contentDescription="@string/empty_img"
        android:src="@drawable/no_events"
        android:scaleType="centerCrop"
        android:elevation="20dp"
        app:layout_constraintBottom_toTopOf="@+id/addLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout2"
        tools:ignore="ImageContrastCheck"/>

    <TextView
        android:id="@+id/emptyLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:text="@string/no_schedules_yet"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/emptyImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/addLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:elevation="20dp"
        android:text="@string/getStarted"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/addFloat"
        app:layout_constraintEnd_toStartOf="@+id/addFloat"
        app:layout_constraintTop_toTopOf="@+id/addFloat"/>

    <ImageView
        android:id="@+id/addFloat"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/addbtn_bg"
        android:contentDescription="@string/add_event"
        android:elevation="20dp"
        android:src="@drawable/plus_float"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="ImageContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>