<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/delTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/delete_confirmation"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="24dp"
        android:textStyle="bold"/>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/delTxt"
        android:background="#1A000000"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="12dp"
        android:paddingEnd="46dp"
        android:paddingStart="38dp"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1"
        android:text="@string/are_you_sure_you_want_to_drop_this"
        android:textSize="15sp"
        android:textColor="#500000"
        android:background="@drawable/sure_bg"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/sure"
        android:background="#1A000000"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2"
        android:layout_marginTop="16dp"
        android:text="@string/delete"
        android:textSize="15sp"
        android:layout_marginEnd="20dp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"
        android:textColor="@color/white"
        android:background="@drawable/del_btn"/>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/deleteBtn"
        app:layout_constraintTop_toBottomOf="@id/line2"
        android:layout_margin="16dp"
        android:text="@string/cancel"
        android:textSize="15sp"
        android:paddingHorizontal="12dp"
        android:paddingVertical="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>