<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="136dp"
    android:layout_marginHorizontal="12dp"
    android:layout_marginVertical="6dp"
    android:layout_marginBottom="12dp"
    tools:ignore="TextSizeCheck">


    <ImageView
        android:id="@+id/moreOptions"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="14dp"
        android:elevation="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/eventTitle"
        app:srcCompat="@drawable/more_options"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="136dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ImageBehind"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/bg"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/img_1"
            tools:ignore="ImageContrastCheck" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/eventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:elevation="10dp"
        android:text="@string/eventTitle"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/posted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:elevation="10dp"
        android:text="@string/posted_by"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/creator"
        app:layout_constraintStart_toStartOf="@id/eventTitle"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:elevation="10dp"
        android:text="@string/creator"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/eventTitle"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/lastDateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="4dp"
        android:elevation="10dp"
        android:text="@string/deadlineOn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/creator"
        app:layout_constraintStart_toEndOf="@id/posted"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/lastDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:elevation="10dp"
        android:text="@string/creator"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/lastDateTxt"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>